[DOCS] Add property table for ML Update Jobs API (elastic/x-pack-elasticsearch#1268)
* [DOCS] Add property table for ML Update Jobs API

* [DOCS] Updates based on feedback for ML Update Jobs API

* [DOCS] Removed detector properties from ML Update Jobs API

* [DOCS] Fixes typos

Original commit: elastic/x-pack-elasticsearch@68d1b5598c1f1dd94fe39de41eb407eecfb64cb9

--- a/docs/en/rest-api/ml/jobresource.asciidoc
+++ b/docs/en/rest-api/ml/jobresource.asciidoc
@@ -260,9 +260,10 @@ The `analysis_limits` object has the following properties:
 NOTE: The `categorization_examples_limit` only applies to analysis that uses categorization.
 
 `model_memory_limit`::
-  (long) The maximum amount of memory, in MiB, that the mathematical models can use.
-  Once this limit is approached, data pruning becomes more aggressive.
-  Upon exceeding this limit, new entities are not modeled. The default value is 4096.
+  (long) The approximate maximum amount of memory resources that are required
+  for analytical processing, in MiB. Once this limit is approached, data pruning
+  becomes more aggressive. Upon exceeding this limit, new entities are not
+  modeled. The default value is 4096.
 
 [float]
 [[ml-apimodelplotconfig]]
