Corrected a mistake on disabling a user (elastic/x-pack-elasticsearch#1135)
Corrected a mistake on disabling a user, when it should be enabling.

Please review the changes.

Original commit: elastic/x-pack-elasticsearch@352997e42737f28b5ee8dd8f48ca3f80a7742440

--- a/docs/en/rest-api/security/users.asciidoc
+++ b/docs/en/rest-api/security/users.asciidoc
@@ -146,7 +146,7 @@ PUT /_xpack/security/user/jacknich/_disable
 // TEST[continued]
 
 [[security-api-enable-user]]
-To disable a user, submit a PUT request to the
+To enable a user, submit a PUT request to the
 `/_xpack/security/user/<username>/_enable` endpoint:
 
 [source,js]
