[ML] Remove get model snapshot by description functionality (elastic/x-pack-elasticsearch#1288)
relates elastic/x-pack-elasticsearch#1284

Original commit: elastic/x-pack-elasticsearch@780feea5c1c283f250a86a0f950f516f9c25d607

--- a/docs/en/rest-api/ml/get-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/get-snapshot.asciidoc
@@ -27,11 +27,6 @@ The get model snapshots API enables you to retrieve information about model snap
 `desc`::
   (boolean) If true, the results are sorted in descending order.
 
-`description`::
-  (string) Returns snapshots that match this description.
-//TBD: I couldn't get this to work. What description value is it using?
-NOTE: It might be necessary to URL encode the description.
-
 `end`::
   (date) Returns snapshots with timestamps earlier than this time.
 
@@ -43,7 +38,7 @@ NOTE: It might be necessary to URL encode the description.
 
 `sort`::
   (string) Specifies the sort field for the requested snapshots.
-//By default, the snapshots are sorted by the xxx value.
+  By default, the snapshots are sorted by their timestamp.
 
 `start`::
   (string) Returns snapshots with timestamps after this time.
