[DOCS] Clarify wildcard usage in ML datafeed APIs (elastic/x-pack-elasticsearch#1296)
Original commit: elastic/x-pack-elasticsearch@c18fca323b0c12f91ef4afc579c61e88bb819e5d

--- a/docs/en/rest-api/ml/start-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/start-datafeed.asciidoc
@@ -44,7 +44,7 @@ If the system restarts, any jobs that had {dfeeds} running are also restarted.
 
 When a stopped {dfeed} is restarted, it continues processing input data from
 the next millisecond after it was stopped. If new data was indexed for that
-exact millisecond, between stopping and starting, it will be ignored.
+exact millisecond between stopping and starting, it will be ignored.
 If you specify a `start` value that is earlier than the timestamp of the latest
 processed record, the {dfeed} continues from 1 millisecond after the timestamp
 of the latest processed record.
