--- a/docs/en/rest-api/ml/put-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/put-datafeed.asciidoc
@@ -39,7 +39,8 @@ You must create a job before you create a {dfeed}.  You can associate only one
   span. For example: "150s".
 
 `indexes` (required)::
-  (array) An array of index names. For example: ["it_ops_metrics"].
+  (array) An array of index names. Wildcards are supported. For example: 
+  ["it_ops_metrics", "server*"].
 
 `job_id` (required)::
  (string) A numerical character string that uniquely identifies the job.
