--- a/docs/en/watcher/java/ack-watch.asciidoc
+++ b/docs/en/watcher/java/ack-watch.asciidoc
@@ -4,7 +4,7 @@
 
 <<actions-ack-throttle, Acknowledging>> a watch enables you to manually throttle
 execution of the watch actions. The action's _acknowledgement state_ is stored in
-the `_status.actions.<id>.ack.state` structure.
+the `status.actions.<id>.ack.state` structure.
 
 The current status of the watch and the state of its actions are returned as part
 of the <<api-java-get-watch, Get Watch API>> response:
