[ML] Rename datafeed indexes to indices (elastic/x-pack-elasticsearch#1297)
Renames datafeed indexes to indices but keeps indexes
as a synonym while parsing.

relates elastic/x-pack-elasticsearch#1292

Original commit: elastic/x-pack-elasticsearch@1fcdd97f889d989f5bcf95053fbc175de9a8e5a7

--- a/docs/en/rest-api/ml/datafeedresource.asciidoc
+++ b/docs/en/rest-api/ml/datafeedresource.asciidoc
@@ -30,7 +30,7 @@ A {dfeed} resource has the following properties:
   bucket spans, or, for longer bucket spans, a sensible fraction of the bucket
   span. For example: "150s"
 
-`indexes` (required)::
+`indices` (required)::
   (array) An array of index names. For example: ["it_ops_metrics"]
 
 `job_id` (required)::
