[DOCS] Add ML analytical functions (elastic/x-pack-elasticsearch#1319)
* [DOCS] Add ML analytical functions

* [DOCS] Add pages for ML analytical functions

* [DOCS] Add links to ML functions from API definitions

Original commit: elastic/x-pack-elasticsearch@ae50b431d3e2ca6cfb61fde014cca2ae9fa0024f

--- a/docs/en/rest-api/ml/jobresource.asciidoc
+++ b/docs/en/rest-api/ml/jobresource.asciidoc
@@ -182,7 +182,8 @@ NOTE: The `field_name` cannot contain double quotes or backslashes.
 
 `function` (required)::
   (string) The analysis function that is used.
-  For example, `count`, `rare`, `mean`, `min`, `max`, and `sum`.
+  For example, `count`, `rare`, `mean`, `min`, `max`, and `sum`. For more
+  information, see <<ml-functions>>.
 
 `over_field_name`::
   (string) The field used to split the data.
