[DOCS] More fixes for build.gradle errors (elastic/x-pack-elasticsearch#1334)
Original commit: elastic/x-pack-elasticsearch@578f727494909b0ebe56700a492e8f5f79d3c87f

--- a/docs/en/ml/functions/geo.asciidoc
+++ b/docs/en/ml/functions/geo.asciidoc
@@ -11,3 +11,13 @@ input data.
 The `field_name` that you supply must be a string of the form
 `latitude,longitude`. The `latitude` and `longitude` must be in the range -180
 to 180 and represent a point on the surface of the Earth.
+
+
+////
+
+[source,js]
+--------------------------------------------------
+{ "function" : "lat_long", "fieldName" : "transactionCoordinates", "byFieldName" : "creditCardNumber" }
+--------------------------------------------------
+
+////
