--- a/docs/en/rest-api/ml/get-influencer.asciidoc
+++ b/docs/en/rest-api/ml/get-influencer.asciidoc
@@ -29,13 +29,13 @@ in a job.
   (boolean) If true, the output excludes interim results.
   By default, interim results are included.
 
-`from`::
-  (integer) Skips the specified number of influencers.
-
 `influencer_score`::
   (double) Returns influencers with anomaly scores higher than this value.
 
-`size`::
+`page`::
+`from`:::
+    (integer) Skips the specified number of influencers.
+`size`:::
   (integer) Specifies the maximum number of influencers to obtain.
 
 `sort`::
