--- a/docs/en/rest-api/ml/revert-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/revert-snapshot.asciidoc
@@ -47,8 +47,6 @@ is planned for.
 Model size (in bytes) is available as part of the Job Resource Model Size Stats.
 ////
 IMPORTANT: Before you revert to a saved snapshot, you must close the job.
-Sending data to a closed job changes its status to `open`, so you must also
-ensure that you do not expect data imminently.
 
 
 ===== Path Parameters
@@ -64,7 +62,7 @@ ensure that you do not expect data imminently.
 `delete_intervening_results`::
   (boolean) If true, deletes the results in the time period between the
   latest results and the time of the reverted snapshot. It also resets the
-  model to accept records for this time period.
+  model to accept records for this time period. The default value is false.
 
 NOTE: If you choose not to delete intervening results when reverting a snapshot,
 the job will not accept input data that is older than the current time.
