[DOCS] More minor fixes (elastic/x-pack-elasticsearch#1343)
Original commit: elastic/x-pack-elasticsearch@351e4ea643c70f10465517dded5137e05c0039ad

--- a/docs/en/rest-api/ml/get-bucket.asciidoc
+++ b/docs/en/rest-api/ml/get-bucket.asciidoc
@@ -2,8 +2,7 @@
 [[ml-get-bucket]]
 ==== Get Buckets
 
-The get bucket API enables you to retrieve information about buckets in the
-results from a job.
+The get bucket API enables you to retrieve job results for one or more buckets.
 
 
 ===== Request
